@@ -1,4 +1,5 @@
-FROM ghcr.io/aquasecurity/trivy:0.24.4 as trivy
+FROM ghcr.io/aquasecurity/trivy:0.38.2 as trivy
+
 
 FROM trivy as scanner
 RUN mkdir -p /tmp/app
@@ -6,11 +7,16 @@ COPY . /tmp/app
 RUN trivy  fs --exit-code 1 --security-checks vuln,config /tmp/app/Dockerfile > /tmp/Dockerfile-report.log && \
     cat /tmp/Dockerfile-report.log
 
-FROM docker.io/library/gradle:7.4.1 AS builder
+FROM docker.io/library/gradle:8-jdk17-alpine AS jre
+COPY java.modules /tmp/java.modules
+RUN apk add binutils # for objcopy, needed by jlink
+RUN jlink --strip-debug --add-modules $(cat /tmp/java.modules) --output /root/java
+
+FROM docker.io/library/gradle:8-jdk17-alpine AS builder
 ARG APP_VERSION
 ENV APP_VERSION=${APP_VERSION:-1.0.0}
 ARG USERNAME=gradle
-COPY --from=scanner /tmp/Dockerfile-report.log /tmp/Dockerfile-report.log
+# COPY --from=scanner /tmp/Dockerfile-report.log /tmp/Dockerfile-report.log
 COPY . /home/$USERNAME/
 WORKDIR /home/$USERNAME/
 
@@ -21,8 +27,10 @@ RUN gradle --info clean build -Pversion=${APP_VERSION} && \
     ls -l /home/$USERNAME/build/libs/ && \
     ls -l /home/$USERNAME/build/libs/spring-demo-${APP_VERSION}.jar
 
+# RUN jdeps --print-module-deps --ignore-missing-deps /home/$USERNAME/build/libs/spring-demo-${APP_VERSION}.jar > /home/$USERNAME/build/java.modules
 
-FROM docker.io/library/openjdk:11.0.14.1-jre-buster AS base
+FROM docker.io/library/alpine:3.17 as base
+# FROM docker.io/library/ubuntu:22.04 as base
 ARG APP_VERSION
 ENV APP_VERSION=${APP_VERSION:-1.0.0}
 
@@ -30,8 +38,9 @@ ENV APP_VERSION=${APP_VERSION:-1.0.0}
 ARG USERNAME=appuser
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
-RUN groupadd --gid $USER_GID $USERNAME \
-&& useradd --uid $USER_UID --gid $USER_GID -m $USERNAME --home /home/$USERNAME
+RUN addgroup --gid $USER_GID $USERNAME \
+&& adduser --uid $USER_UID --ingroup $USERNAME $USERNAME --home /home/$USERNAME --shell /bin/sh --disabled-password
+COPY --from=jre /root/java /java
 COPY --from=builder /home/gradle/build/libs/spring-demo-${APP_VERSION}.jar /home/$USERNAME/spring-demo.jar
 RUN chown -R $USER_UID:$USER_GID /home/$USERNAME/spring-demo.jar && \
 chmod 400 /home/$USERNAME/spring-demo.jar
@@ -42,22 +51,26 @@ EXPOSE 8081
 HEALTHCHECK --interval=1m --timeout=1s --start-period=5s --retries=2 \
 CMD curl -f http://localhost:8081/ || exit 1
 
-#CMD ["ls", "-ltr", "/home/appuser/spring-demo.jar"]
-CMD ["java", "-jar", "/home/appuser/spring-demo.jar"]
+# CMD ["ls", "-ltr", "/home/appuser/spring-demo.jar"]
+CMD ["/java/bin/java", "-jar", "/home/appuser/spring-demo.jar"]
 
 # Run vulnerability scan on final image
-FROM base AS vulnscan
-COPY --from=trivy /usr/local/bin/trivy /usr/local/bin/trivy
-RUN trivy rootfs --exit-code 0  / > /tmp/base-image-vulnscan-report && \
+FROM trivy AS vulnscan
+COPY --from=base / /base-file-system
+RUN trivy rootfs --exit-code 0  /base-file-system > /tmp/base-image-vulnscan-report && \
     cat /tmp/base-image-vulnscan-report
 
-FROM base AS test
+FROM curlimages/curl:latest AS test
 ARG USERNAME=appuser
 COPY --from=vulnscan  /tmp/base-image-vulnscan-report /tmp/base-image-vulnscan-report
-RUN java -jar /home/$USERNAME/spring-demo.jar & echo 'Running Application' && \
+ARG APP_VERSION
+ENV APP_VERSION=${APP_VERSION:-1.0.0}
+COPY --from=builder /home/gradle/build/libs/spring-demo-${APP_VERSION}.jar /home/$USERNAME/spring-demo.jar
+COPY --from=base  /java /java
+RUN /java/bin/java -jar /home/$USERNAME/spring-demo.jar & echo 'Running Application' && \
     sleep 90 && \
     curl http://localhost:8081 && \
-#    kill -s 9 `pidof java` && \
+    # kill -s 9 `pidof java` && \
     date > /tmp/image-test-date
 
 FROM base as final
